# JazzHands

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  requirements.yml  setup.cfg  setup.py  testing_requirements.txt  tox.ini
.github/workflows/: pypi_release.yml  test_code.yml  test_docs.yml
docs/: conf.py  index.rst
docs/jazzhands/: getting_started.rst  index.rst  install.rst
jazzhands/: __init__.py  base_wavelet.py  fill_gaps.ipynb  frequency_grid.py  mother_wavelets.py  utility.py  utils.py  wavelets.py
jazzhands/data/: benchmarking.ipynb  one_sin_0p05_noise_100_obs.txt  one_sin_100_obs_wwz.txt  test_vectorized_timing.py  two_sin_0p05_noise_10000_obs.txt  two_sin_0p05_noise_1000_obs.txt  two_sin_10000_obs_wwa.txt  two_sin_1000_obs_wwa.txt
jazzhands/data/outputs/: one_sin_10000_obs_wwa.txt  one_sin_10000_obs_wwz.txt  one_sin_1000_obs_wwa.txt  one_sin_1000_obs_wwz.txt  one_sin_100_obs_wwa.txt  one_sin_100_obs_wwz.txt  two_sin_10000_obs_wwa.txt  two_sin_10000_obs_wwz.txt  two_sin_1000_obs_wwa.txt  two_sin_1000_obs_wwz.txt  two_sin_100_obs_wwa.txt  two_sin_100_obs_wwz.txt
jazzhands/data/synthetic_lightcurves/: one_sin_0p05_noise_10000_obs.txt  one_sin_0p05_noise_1000_obs.txt  two_sin_0p05_noise_100_obs.txt
jazzhands/example_subpkg/: setup_package.py
jazzhands/tests/: test_frequency_grid.py  test_utility.py  test_utils.py  test_wavelets.py
licenses/: LICENSE.rst
paper/: paper.bib  paper.md
references/: README.md
